little fix which caused screen flickering in emulator

--- a/PhoneGapAndroidProject/assets/www/index.css
+++ b/PhoneGapAndroidProject/assets/www/index.css
@@ -257,7 +257,7 @@ dl > dd{
 		padding: 0px;
 		margin: 0px 1% 0px 1%;
 		float: left;
-		width: 99%;
+		width: 97%;
 		overflow: auto;
 	}	
 	#subheader {
